--- a/.gitignore
+++ b/.gitignore
@@ -142,3 +142,7 @@ buildNumber.properties
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+
+#------------------------------------
+*.DS_Store
+
