--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,7 +26,7 @@ spring:
   jpa:
     open-in-view: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
       use-new-id-generator-mappings: false
@@ -37,6 +37,16 @@ spring:
   jackson:
     serialization:
       fail-on-empty-beans: false
+
+  http:
+    encodign:
+      charset: UTF-8
+      enable: true
+      force: true
+
+
+cos:
+  key: cos1234
 
 
 
